// Copyright 2025 Cisco Systems, Inc. and its affiliates
// SPDX-License-Identifier: Apache-2.0

// This file was autogenerated by go-to-protobuf. Do not edit it manually!

syntax = "proto3";

package outshift.identity.service.v1alpha1;

import "google/api/field_behavior.proto";
import "google/protobuf/timestamp.proto";

// Package-wide variables from generator "generated".
option go_package = "github.com/outshift/identity-service/api/server/outshift/identity/service/v1alpha1;identity_service_sdk_go";

// APIKey
message APIKey {
  // A unique identifier for the APIKey.
  optional string id = 1 [(.google.api.field_behavior) = OUTPUT_ONLY];

  // The ID of the user associated with the APIKey.
  optional string name = 2 [(.google.api.field_behavior) = REQUIRED];

  // The secret key used for authentication.
  optional string secret = 3 [(.google.api.field_behavior) = OUTPUT_ONLY];

  // The ID of the tenant associated with the APIKey.
  optional string tenant_id = 4 [(.google.api.field_behavior) = REQUIRED];

  // The ID of the application associated with the APIKey, if applicable.
  optional string app_id = 6 [(.google.api.field_behavior) = OPTIONAL];

  // The creation time of the APIKey.
  optional .google.protobuf.Timestamp created_at = 7 [(.google.api.field_behavior) = OUTPUT_ONLY];
}
